fixed scrollbars

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,4 +5,5 @@
 
 body {
 	background-color: #222222;
+	overflow: hidden;
 }
